--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,16 @@ nav {
   padding: 0.1em;
 }
 
+main {
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid #e2e2e2;
+  padding: 0.75em;
+}
+
 .name {
   font-weight: bold;
   font-size: 1.5em;
